--- a/index.html
+++ b/index.html
@@ -47,19 +47,22 @@
       <div class="row">
         <div class="col-lg-4">
             <div class="card">
-                <img class="card-img-top" src="img/1.png" alt="Card image" style="width:50%">
+                <img class="card-img-top" src="img/4.png" alt="Card image" style="width:50%">
                 <div class="card-body">
-                  <h4 class="card-title">Slack Login</h4>
-                  <a href="https://app.slack.com/client/T03S2LB727R/D03SH5E71BM" target="_blank" class="btn btn-primary">Slack Login</a>
+                  <h4 class="card-title">Canva Login</h4>
+                  <a href="https://www.canva.com/" target="_blank" class="btn btn-primary">Canva Login</a>
                 </div>
               </div>
         </div>
         <div class="col-lg-4">
             <div class="card">
-                <img class="card-img-top" src="img/2.png" alt="Card image" style="width:50%">
+                <img class="card-img-top" src="img/5.png" alt="Card image" style="width:50%">
                 <div class="card-body">
-                  <h4 class="card-title">Asana Login</h4>
-                  <a href="https://app.asana.com/0/home/1202719863204590" target="_blank" class="btn btn-primary">Asana Login</a>
+                  <div class="row">
+                        <p><strong>Username:</strong>&nbsp;erpadmin@interactivewebtech.net</p>
+                        <p><strong>Password:</strong>&nbsp;Erpwork@123</p>
+                  </div>
+                  <a style="margin-bottom: 10px;" href="http://stockeai.com/Admin_dashboard/login" target="_blank" class="btn btn-primary">Stockie Login</a>
                 </div>
               </div>
         </div>
