--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <br><br><br><br>
     <div class="container">
-        <h3 style="margin-bottom: 30px;" class="text-center">Project Management Login Details</h3>
+        <h3 style="margin-bottom: 30px;" class="text-center">Project Management Login Details &nbsp; <a href="template.html"><button class="btn btn-primary btn-sm">Template Page</button></a></h3>
       <div class="row">
         <div class="col-lg-4">
             <div class="card">
