--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
    <br><br><br><br>
     <div class="container">
+        <img style="position: absolute;
+        top: 61px;" src="logo.png" width="100" height="100" alt="logo">
         <h3 style="margin-bottom: 30px;" class="text-center">Project Management Login Details &nbsp; <a href="template.html"><button class="btn btn-primary btn-sm">Template Page</button></a></h3>
       <div class="row">
         <div class="col-lg-4">
