--- a/template.html
+++ b/template.html
@@ -13,6 +13,8 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
+    <img style="position: absolute;
+    top: 30px;" src="logo.png" width="100" height="100" alt="logo">
     <h1 class="text-center">Template Design Layout</h1>      
   </div>
 </div>
