--- a/template.html
+++ b/template.html
@@ -48,6 +48,26 @@
             <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
         </ul>
     </div>
+
+    <div style="margin-top: 30px;" class="col-lg-4">
+      <h2>Retailer & Event website</h2>
+      <ul>
+          <li><a href="https://amoriotechnology.github.io/retailer/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Success</span></a></li>
+          <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+          <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+          <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+      </ul>
+  </div>
+
+  <div style="margin-top: 30px;" class="col-lg-4">
+    <h2>Event website</h2>
+    <ul>
+        <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Success</span></a></li>
+        <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+        <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+        <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+    </ul>
+</div>
     </div>
   </div>
 
