--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
    <br><br><br><br>
     <div class="container">
-        <img style="position: absolute;
-        top: 61px;" src="logo.png" width="100" height="100" alt="logo">
+        <a href="index.html"><img style="position: absolute;
+        top: 61px;" src="logo.png" width="100" height="100" alt="logo"></a>
         <h3 style="margin-bottom: 60px;" class="text-center">Project Management Login Details &nbsp; <a href="template.html"><button class="btn btn-primary btn-sm">Template Page</button></a></h3>
       <div class="row">
         <div class="col-lg-4">
@@ -61,14 +61,13 @@
                 <img class="card-img-top" src="img/5.png" alt="Card image" style="width:50%">
                 <div class="card-body">
                   <div class="row">
-                        <p><strong>Username:</strong>&nbsp;erpadmin@interactivewebtech.net</p>
+                        <p><strong>Username:</strong>&nbsp; erpadmin@interactivewebtech.net</p>
                         <p><strong>Password:</strong>&nbsp;Erpwork@123</p>
                   </div>
                   <a style="margin-bottom: 10px;" href="http://stockeai.com/Admin_dashboard/login" target="_blank" class="btn btn-primary">Stockie Login</a>
                 </div>
               </div>
         </div>
-        
       </div>
     </div>
 </body>
