--- a/template.html
+++ b/template.html
@@ -34,8 +34,8 @@
         <h2>Nail Saloon Website</h2>
         <ul>
             <li><a href="https://amoriotechnology.github.io/nail_saloon/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/nailsaloon_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-primary">On Process</span></a></li>
-            <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/nailsaloon_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/nailsaloon_1/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
         </ul>
       </div>
