--- a/template.html
+++ b/template.html
@@ -42,7 +42,7 @@
       <div class="col-lg-4">
         <h2>Restaurant website</h2>
         <ul>
-            <li><a href="" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/restaurant/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
             <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
             <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
@@ -52,7 +52,7 @@
     <div style="margin-top: 30px;" class="col-lg-4">
       <h2>Retailer & Event website</h2>
       <ul>
-          <li><a href="https://amoriotechnology.github.io/retailer/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Success</span></a></li>
+          <li><a href="https://amoriotechnology.github.io/retailer/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
           <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
           <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
           <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
@@ -62,7 +62,7 @@
   <div style="margin-top: 30px;" class="col-lg-4">
     <h2>Event website</h2>
     <ul>
-        <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Success</span></a></li>
+        <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
         <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
         <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
         <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
