--- a/template.html
+++ b/template.html
@@ -22,12 +22,12 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-lg-4">
-        <h2>Absolute website </h2>
+        <h2>Stone Industry website </h2>
         <ul>
             <li><a href="https://amoriotechnology.github.io/granite/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="https://amoriotechnology.github.io/granite_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="https://amoriotechnology.github.io/granite_3/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/granite/">Template4&nbsp; &nbsp;<span class="badge badge-success">Completed (A)</span></a></li>
         </ul>
       </div>
       <div class="col-lg-4">
