--- a/template.html
+++ b/template.html
@@ -43,7 +43,7 @@
         <h2>Restaurant website</h2>
         <ul>
             <li><a href="https://amoriotechnology.github.io/restaurant/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/restaurant_1/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
             <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
         </ul>
