--- a/template.html
+++ b/template.html
@@ -25,7 +25,8 @@
         <h2>Stone Industry website </h2>
         <ul>
             <li><a href="https://amoriotechnology.github.io/granite_temp/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span>(A)</a></li>
-            <li><a href="https://amoriotechnology.github.io/granite_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
+            <!-- <li><a href="https://amoriotechnology.github.io/granite_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li> -->
+            <li><a href="http://stockeai.com/visualizer/granite.php" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="https://amoriotechnology.github.io/granite_3/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
         </ul>
