--- a/template.html
+++ b/template.html
@@ -69,7 +69,20 @@
         <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
     </ul>
 </div>
+ <div style="margin-top: 30px;" class="col-lg-4">
+   
+</div>
+   
+    <div class="col-md-12">
+      <br><br>
+       <h2>Our Clients Websites</h2>
+        <ul>
+          <li><a href="http://stockeai.com/absolute/" target="_blank">Absolute granites</a></li>
+          <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Save Safe Space</a></li>
+        </ul>
     </div>
+    </div>
+     
   </div>
 
 </body>
