--- a/template.html
+++ b/template.html
@@ -46,7 +46,8 @@
             <li><a href="https://amoriotechnology.github.io/restaurant/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="https://amoriotechnology.github.io/restaurant_1/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
             <li><a href="https://amoriotechnology.github.io/restuartant_2/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/Mex_restaurtant/">Template4&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
+            <li><a href="https://amoriotechnology.github.io/us_restaurtant/">Template5&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
         </ul>
     </div>
 
@@ -77,8 +78,10 @@
       <br><br>
        <h2>Our Clients Websites</h2>
         <ul>
-          <li><a href="http://stockeai.com/absolute/" target="_blank">Absolute granites</a></li>
+          <li><a href="http://absolutegranites.com/" target="_blank">Absolute granites</a></li>
+          <li><a href="http://www.lancasterstones.com/" target="_blank">Lancaster Stones</a></li>
           <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Save Safe Space</a></li>
+          <li><a href="https://buildial.com/" target="_blank">Buildial</a></li>
         </ul>
     </div>
     </div>
