--- a/template.html
+++ b/template.html
@@ -1,92 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Template Design Layout</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+  <head>
+    <title>Template Design Layout</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <a href="index.html"
+          ><img
+            style="position: absolute; top: 30px"
+            src="logo.png"
+            width="100"
+            height="100"
+            alt="logo"
+        /></a>
+        <h1 class="text-center">Template Design Layout</h1>
+      </div>
+    </div>
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <a href="index.html"><img style="position: absolute;
-    top: 30px;" src="logo.png" width="100" height="100" alt="logo"></a>
-    <h1 class="text-center">Template Design Layout</h1>      
-  </div>
-</div>
-
-<div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-4">
-        <h2>Stone Industry website </h2>
-        <ul>
-            <li><a href="https://amoriotechnology.github.io/granite_temp/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span>(A)</a></li>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4">
+          <h2>Stone Industry website</h2>
+          <ul>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/granite_temp/"
+                target="_blank"
+                >Template1 &nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                >(A)</a
+              >
+            </li>
             <!-- <li><a href="https://amoriotechnology.github.io/granite_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li> -->
-            <li><a href="http://stockeai.com/visualizer/granite.php" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/granite_3/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-        </ul>
+            <li>
+              <a
+                href="http://stockeai.com/visualizer/granite.php"
+                target="_blank"
+                >Template2&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/granite_3/"
+                target="_blank"
+                >Template3&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href=""
+                >Template4&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <h2>Nail Saloon Website</h2>
+          <ul>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/nail_saloon/"
+                target="_blank"
+                >Template1 &nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/nailsaloon_new/"
+                target="_blank"
+                >Template2&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/nailsaloon_1/"
+                target="_blank"
+                >Template3&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href=""
+                >Template4&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <h2>Restaurant website</h2>
+          <ul>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/restaurant/"
+                target="_blank"
+                >Template1 &nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/restaurant_1/"
+                target="_blank"
+                >Template2&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/restuartant_2/"
+                target="_blank"
+                >Template3&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="https://amoriotechnology.github.io/Mex_restaurtant/"
+                >Template4&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="https://amoriotechnology.github.io/us_restaurtant/"
+                >Template5&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div style="margin-top: 30px" class="col-lg-4">
+          <h2>Retailer & Event website</h2>
+          <ul>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/retailer/"
+                target="_blank"
+                >Template1 &nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="" target="_blank"
+                >Template2&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="" target="_blank"
+                >Template3&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href=""
+                >Template4&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div style="margin-top: 30px" class="col-lg-4">
+          <h2>Event website</h2>
+          <ul>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/event/"
+                target="_blank"
+                >Template1 &nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="" target="_blank"
+                >Template2&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="" target="_blank"
+                >Template3&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href=""
+                >Template4&nbsp; &nbsp;<span class="badge badge-danger"
+                  >Pending</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div style="margin-top: 30px" class="col-lg-4"></div>
+
+        <div class="col-md-4">
+          <br /><br />
+          <h2>Our Clients Websites</h2>
+          <ul>
+            <li>
+              <a href="http://absolutegranites.com/" target="_blank"
+                >Absolute granites</a
+              >
+            </li>
+            <li>
+              <a href="http://www.lancasterstones.com/" target="_blank"
+                >Lancaster Stones</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/event/"
+                target="_blank"
+                >Save Safe Space</a
+              >
+            </li>
+            <li>
+              <a href="https://buildial.com/" target="_blank">Buildial</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-md-4">
+          <br /><br />
+          <h2>Business & Payment Authorization Form</h2>
+          <ul>
+            <li>
+              <a href="https://amoriotech.com/business-form/" target="_blank"
+                >Business Collection form</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://amoriotech.com/payment-authorization/"
+                target="_blank"
+                >Payment Authorization Form</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="col-lg-4">
-        <h2>Nail Saloon Website</h2>
-        <ul>
-            <li><a href="https://amoriotechnology.github.io/nail_saloon/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/nailsaloon_new/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/nailsaloon_1/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-        </ul>
-      </div>
-      <div class="col-lg-4">
-        <h2>Restaurant website</h2>
-        <ul>
-            <li><a href="https://amoriotechnology.github.io/restaurant/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/restaurant_1/" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/restuartant_2/" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/Mex_restaurtant/">Template4&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-            <li><a href="https://amoriotechnology.github.io/us_restaurtant/">Template5&nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-        </ul>
     </div>
-
-    <div style="margin-top: 30px;" class="col-lg-4">
-      <h2>Retailer & Event website</h2>
-      <ul>
-          <li><a href="https://amoriotechnology.github.io/retailer/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-          <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-          <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-          <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-      </ul>
-  </div>
-
-  <div style="margin-top: 30px;" class="col-lg-4">
-    <h2>Event website</h2>
-    <ul>
-        <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Template1 &nbsp; &nbsp;<span class="badge badge-success">Completed</span></a></li>
-        <li><a href="" target="_blank">Template2&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-        <li><a href="" target="_blank">Template3&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-        <li><a href="">Template4&nbsp; &nbsp;<span class="badge badge-danger">Pending</span></a></li>
-    </ul>
-</div>
- <div style="margin-top: 30px;" class="col-lg-4">
-   
-</div>
-   
-    <div class="col-md-12">
-      <br><br>
-       <h2>Our Clients Websites</h2>
-        <ul>
-          <li><a href="http://absolutegranites.com/" target="_blank">Absolute granites</a></li>
-          <li><a href="http://www.lancasterstones.com/" target="_blank">Lancaster Stones</a></li>
-          <li><a href="https://amoriotechnology.github.io/event/" target="_blank">Save Safe Space</a></li>
-          <li><a href="https://buildial.com/" target="_blank">Buildial</a></li>
-        </ul>
-    </div>
-    </div>
-     
-  </div>
-
-</body>
+  </body>
 </html>
