--- a/template.html
+++ b/template.html
@@ -100,9 +100,11 @@
               >
             </li>
             <li>
-              <a href=""
-                >Template4&nbsp; &nbsp;<span class="badge badge-danger"
-                  >Pending</span
+              <a
+                href="https://amoriotechnology.github.io/nailtemplate4/"
+                target="_blank"
+                >Template4&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
                 ></a
               >
             </li>
