--- a/template.html
+++ b/template.html
@@ -108,6 +108,15 @@
                 ></a
               >
             </li>
+            <li>
+              <a
+                href="https://amoriotechnology.github.io/angel-spa/"
+                target="_blank"
+                >Template5&nbsp; &nbsp;<span class="badge badge-success"
+                  >Completed</span
+                ></a
+              >
+            </li>
           </ul>
         </div>
         <div class="col-lg-4">
