--- a/template.html
+++ b/template.html
@@ -263,6 +263,15 @@
             <li>
               <a href="https://buildial.com/" target="_blank">Buildial</a>
             </li>
+             <li>
+              <a href="https://www.ucargogroup.com/" target="_blank">UcargoGroup</a>
+            </li>
+             <li>
+              <a href="https://angelspanails.com/" target="_blank">Angelspa</a>
+            </li>
+            <li>
+              <a href="https://amoriotech.net/sanddhya/" target="_blank">Neeru Infotech</a>
+            </li>
           </ul>
         </div>
 
