--- a/template.html
+++ b/template.html
@@ -272,6 +272,9 @@
             <li>
               <a href="https://amoriotech.net/sanddhya/" target="_blank">Neeru Infotech</a>
             </li>
+             <li>
+              <a href="https://amoriotech.net/stonemetal/" target="_blank">Stone & Metal</a>
+            </li>
           </ul>
         </div>
 
