--- a/template.html
+++ b/template.html
@@ -241,7 +241,7 @@
 
         <div class="col-md-4">
           <br /><br />
-          <h2>Our Clients Websites</h2>
+          <h2>Our Websites</h2>
           <ul>
             <li>
               <a href="http://absolutegranites.com/" target="_blank"
@@ -274,6 +274,9 @@
             </li>
              <li>
               <a href="https://amoriotech.net/stonemetal/" target="_blank">Stone & Metal</a>
+            </li>
+            <li>
+              <a href="http://sclogistics.co.in/" target="_blank">Sclogistics</a>
             </li>
           </ul>
         </div>
